# Ontologizer-Tauri

./: 404.html  README.md  angular.json  index.html  mkdocs.yml  package-lock.json  package.json
datasets/: index.html
developers/: index.html
docs/: datasets.md  developers.md  index.md
search/: search_index.json
src/: custom-theme.scss  index.html  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appstate.rs  main.rs
src-tauri/src/commands/: analysis.rs  analysis_output.rs  config.rs  file_stats.rs  loaders.rs  mod.rs  output.rs  run_analysis.rs  user_settings.rs
src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts  reuse-strategy.ts
src/app/pages/about/: about.css  about.html  about.ts
src/app/pages/analysis/: analysis.css  analysis.html  analysis.ts
src/app/pages/analysis/analysis-bar-chart/: analysis-bar-chart.css  (+2 more)
src/app/pages/contact/: contact.css  contact.html
src/app/pages/files/: files.css  files.html  files.ts
src/app/pages/results/: results.css  results.html  results.ts
src/app/pages/settings/: settings.css  settings.html  settings.ts
src/app/pages/setup/: setup.css  setup.html  setup.ts
src/app/services/: analysis-service.ts  files-service.ts  results-service.spec.ts  results-service.ts  settingsService.spec.ts  settingsService.ts
src/app/shared/dropdown-menu/: dropdown-menu.css  dropdown-menu.html  dropdown-menu.ts
src/app/shared/tooltip/: tooltip.css  tooltip.html  tooltip.ts
(+43 files in other folders)
