[package]
name = "ontologizer-tauri"
version = "1.0.0"
description = "Rust (tauri) implementation of the Ontologizer application for characterizing GO Term Overrepresentation"
authors = ["Peter N. Robinson, Jasmin Scholtes"]
license = "MIT"
repository = ""
# default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]

tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

tauri-plugin-fs = "2"
oboannotation = { git = "https://github.com/P2GX/oboannotation.git", tag = "v0.1.2" }
tauri-plugin-dialog = "2"
#ontologizer = { path = "../../ontologizer" }
ontologizer = { git = "https://github.com/P2GX/ontologizer.git", branch = "master" }

tokio = { version = "1", features = ["full"] }

serde = { version = "^1.0", features = ["derive"] }
ontolius = "0.5.4"
serde_json = "^1.0"

[dev-dependencies]
rstest = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
